# siggy

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/update-homebrew/: action.yml
.github/workflows/: release.yml
docs/src/: SUMMARY.md  changelog.md
docs/src/dev-guide/: database.md  modules.md  protocol.md  roadmap.md  testing.md
docs/src/user-guide/: commands.md  configuration.md  faq.md  features.md  keybindings.md  security.md
docs/theme/css/: irc-theme.css
scripts/: check-app-field-count.sh
src/: app.rs  autocomplete.rs  config.rs  conversation_store.rs  db.rs  debug_log.rs  image_render.rs  input.rs  keybindings.rs  lib.rs  link.rs  list_overlay.rs  main.rs  settings_profile.rs  setup.rs  theme.rs  ui.rs
src/domain/: emoji_picker.rs  file_picker.rs  input.rs  mod.rs  search.rs  typing.rs
src/signal/: client.rs  mod.rs  types.rs
src/snapshots/: siggy__ui__snapshot_tests__about_overlay.snap  siggy__ui__snapshot_tests__settings_overlay.snap
