[package]
name = "siggy"
version = "1.5.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Terminal-based Signal messenger client with vim keybindings"
repository = "https://github.com/johnsideserf/siggy"
keywords = ["signal", "tui", "terminal", "messenger", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
toml = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
arboard = "3"
open = "5"
notify-rust = "4"

emojis = "0.8"

[dev-dependencies]
insta = "1"
rstest = "0.26"
